kube/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-go
spec:
  replicas: 1
#  strategy:
#    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-go
    spec:
      imagePullSecrets:
        - name: aws-ecr-hello-go
      containers:
        - name: hello-go
          image: 861580977433.dkr.ecr.eu-central-1.amazonaws.com/test/test-go:v2
#          imagePullPolicy: Always
          ports:
            - containerPort: 8080
#          resources:
#            limits:
#              cpu: 5m
#            requests:
#              cpu: 5m
