kube/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  imagePullSecrets:
    - name: aws-ecr-hello-go
  containers:
    - name: hello-go
      image: 861580977433.dkr.ecr.eu-central-1.amazonaws.com/test/test-go:v1
      ports:
        - containerPort: 8080
