kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-go
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: hello-go
